--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
-[Bb]uild/
-[Bb]uilds/
 Assets/AssetStoreTools*
 
 # Visual Studio cache directory
@@ -28,6 +26,8 @@ ExportedObj/
 # Unity3D generated meta files
 *.pidb.meta
 *.pdb.meta
+
+*.rar
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
